fixed wrong color on focus state in search seasons

--- a/src/components/form/search_seasons/search_seasons.scss
+++ b/src/components/form/search_seasons/search_seasons.scss
@@ -288,7 +288,7 @@
     & .osg-search-seasons__input {
       &:hover,
       &:focus {
-        border-color: colors.$blue-light !important;
+        border-color: colors.$blue !important;
       }
     }
   }
@@ -315,7 +315,7 @@
     & .osg-search-seasons__input {
       &:hover,
       &:focus {
-        border-color: colors.$blue-light !important;
+        border-color: colors.$blue !important;
       }
     }
   }
